gitops/argocd/additional_config/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tls
  namespace: argocd
spec:
  tls:
  - hosts:
      - argocd.buc.sh
    secretName: cert-argocd-buc-sh
  rules:
  - host: "argocd.buc.sh"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 80
